package com.example.mathprojectyehonatan.workermanage;

public interface InterOnWorkerClickListener {
    void OnWorkerClick(worker item);//פעולה לא ממומשת
}
